--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="zh">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>装箱计算工具</title>
+    <link href="static/css/main.css" rel="stylesheet">
   </head>
   <body>
-    <h1>装箱计算工具部署测试</h1>
-    <p>请运行 <code>npm run build</code> 生成正式版。</p>
+    <noscript>您需要启用 JavaScript 才能使用此工具。</noscript>
+    <div id="root"></div>
+    <script src="static/js/main.js"></script>
   </body>
 </html>
